--- a/src/style.css
+++ b/src/style.css
@@ -3,5 +3,15 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Helvetica', sans-serif;
-    height: 100%;
 }
+
+body{
+    width: 100%;
+    height: 100%;
+    background-color: #161616;
+    color: #000;
+    background-image: url("");
+    background-repeat: no-repeat;
+
+}
+
