--- a/src/style.css
+++ b/src/style.css
@@ -3,15 +3,12 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Helvetica', sans-serif;
+    position: relative;
 }
 
 body{
     width: 100%;
     height: 100%;
     background-color: #161616;
-    color: #000;
-    background-image: url("");
-    background-repeat: no-repeat;
-
 }
 
