--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Helvetica', sans-serif;
+    font-family: 'Press Start 2P', sans-serif;
     position: relative;
 }
 
@@ -10,25 +12,10 @@ body{
     width: 100%;
     height: 100%;
     background-color: #161616;
+    
 }
 
-.socialmidia{
-    width: 100%;
-    height: auto;
-    background-color: rgb(19, 19, 19);
-    float: left;
-    text-align: center;
-}
+/*
+rgba(233, 233, 233, 0.74);
 
-.socialmidia> img{
-    width: 50px;
-    height: 50px;
-    border-top: 2px solid rgba(255, 255, 255, 0.671);
-    margin-right: 10px;
-    margin-left: 10px;
-}
 
-.socialmidia >  img:hover{
-    transform: scale(0.1);
-    border-top: 2px solid rgba(255, 255, 255, 0.938);
-}
