--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
     --three-color: rgba(15, 15, 15, 1);
     --four-color: rgba(233, 233, 233, 0.9);
     --five-color: rgba(233, 233, 233, 0.3);
-    --six-color: rgb(103, 137, 131);
+    --six-color: rgba(196, 196, 196, 0.726);
 }
 
 *{
